--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:layout_below="@+id/password_textview"
+        android:onClick="loginSuccess"
         />
     <Button
         android:layout_width="wrap_content"
