--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,43 +6,35 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="yassin.marc.senditon.LoginActivity">
+                tools:context="yassin.marc.senditon.SignUpActivity">
+
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Username"
-        android:id="@+id/usernameEditText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="140dp"/>
-    <requestFocus/>
-
+        android:id="@+id/signUpUsernameEditText"
+        android:layout_marginTop="140dp"
+        android:hint="Username"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/passwordEditText"
-        android:hint="Password"
+        android:id="@+id/signUpEmailEditText"
+        android:hint="email@"
+        android:layout_below="@+id/signUpUsernameEditText"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/signUpPasswordEditText"
+        android:hint="Set a password"
         android:inputType="textPassword"
-        android:layout_below="@+id/usernameEditText"
-        />
+        android:layout_below="@+id/signUpEmailEditText"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/passwordEditText"
-        android:text="Login"
-        android:id="@+id/loginButton"
+        android:id="@+id/signUpButton"
+        android:layout_below="@+id/signUpPasswordEditText"
+        android:text="Sign Up!"
         android:textAllCaps="false"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/signUpTextView"
-        android:text="Sign Up"
-        android:layout_below="@+id/loginButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"/>
-
 
 
 </RelativeLayout>
