--- a/app/src/main/res/layout/fragment_tab_fragment1.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment1.xml
@@ -7,6 +7,7 @@
 
     <ListView
         android:id="@+id/listView"
+        android:onClick=""
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
