--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -6,7 +6,8 @@
               android:orientation="vertical">
 
     <ListView
-        android:id="@+id/listView4"
+        android:layout_marginTop="70dp"
+        android:id="@+id/listViewTraining"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -19,14 +20,14 @@
         android:orientation="vertical"
         android:layout_gravity="bottom">
         <!--<EditText-->
-            <!--android:id="@+id/trainingText"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"/>-->
+        <!--android:id="@+id/todoText"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
         <!--<Button-->
-            <!--android:id="@+id/addTraining"-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="@string/add_item"/>-->
+        <!--android:id="@+id/addButton"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/add_item"/>-->
     </LinearLayout>
 
 </LinearLayout>
