--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -18,15 +18,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="bottom">
-        <EditText
-            android:id="@+id/newsText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/addNews"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/add_item"/>
+        <!--<EditText-->
+            <!--android:id="@+id/newsText"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"/>-->
+        <!--<Button-->
+            <!--android:id="@+id/addNews"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/add_item"/>-->
     </LinearLayout>
 
 </LinearLayout>
