--- a/app/src/main/res/layout/fragment_tab_fragment5.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment5.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Tab 5"
+        android:text="In Progress..."
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </RelativeLayout>
