--- a/app/src/main/res/layout/activity_survey_user.xml
+++ b/app/src/main/res/layout/activity_survey_user.xml
@@ -7,7 +7,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="cayenne.team.merv.SurveyUserActivity"
+                tools:context="cayenne.team.merv.Login.SurveyUserActivity"
               android:orientation="vertical">
 
     <TextView
