--- a/app/src/main/res/layout/content_task_main.xml
+++ b/app/src/main/res/layout/content_task_main.xml
@@ -7,6 +7,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_task_main" tools:context="cayenne.team.merv.TaskMainActivity">
+    tools:showIn="@layout/activity_task_main" tools:context="cayenne.team.merv.Main.Tabs.Tasks.Tabs.TaskMainActivity">
 
 </RelativeLayout>
