--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -13,20 +12,16 @@
         android:layout_marginTop="90dp"
         android:textSize="20sp"
 
-        android:layout_centerHorizontal="true"
         android:includeFontPadding="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <ImageView
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:layout_below="@id/summaryTextView"
-        android:adjustViewBounds="true"
-        android:layout_centerHorizontal="true"
-        android:src="@mipmap/map"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/mapwhere" />
 
 
-
-
-</RelativeLayout>
+</LinearLayout>
